Added Training Logic

--- a/Finetuning VideoMAE/Modelling.ipynb
+++ b/Finetuning VideoMAE/Modelling.ipynb
@@ -647,6 +647,252 @@
     "video_tensor = sample_video[\"video\"]\n",
     "display_gif(video_tensor)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420479f3",
+   "metadata": {},
+   "source": [
+    "## 2.4 Train the Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56cf559a",
+   "metadata": {},
+   "source": [
+    "### TrainingArguments Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26fe5663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import TrainingArguments, Trainer\n",
+    "\n",
+    "model_name = model_ckpt.split(\"/\")[-1]\n",
+    "new_model_name = f\"{model_name}-finetuned-ucf101-subset\"\n",
+    "num_epochs = 4\n",
+    "\n",
+    "args = TrainingArguments(\n",
+    "    new_model_name,\n",
+    "    remove_unused_columns=False,\n",
+    "    eval_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    learning_rate=5e-5,\n",
+    "    per_device_train_batch_size=batch_size,\n",
+    "    per_device_eval_batch_size=batch_size,\n",
+    "    warmup_ratio=0.1,\n",
+    "    logging_steps=10,\n",
+    "    load_best_model_at_end=True,\n",
+    "    metric_for_best_model=\"accuracy\",\n",
+    "    push_to_hub=True,\n",
+    "    max_steps=(train_dataset.num_videos // batch_size) * num_epochs,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "324c56b3",
+   "metadata": {},
+   "source": [
+    "### Compute the Accuracy Metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01f4f77d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import evaluate\n",
+    "\n",
+    "metric = evaluate.load(\"accuracy\")\n",
+    "\n",
+    "\n",
+    "def compute_metrics(eval_pred):\n",
+    "    predictions = np.argmax(eval_pred.predictions, axis=1)\n",
+    "    return metric.compute(predictions=predictions, references=eval_pred.label_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3348de78",
+   "metadata": {},
+   "source": [
+    "### Custom `collate_fn` for Video Batching in PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24b8f721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collate_fn(examples):\n",
+    "    # permute to (num_frames, num_channels, height, width)\n",
+    "    pixel_values = torch.stack(\n",
+    "        [example[\"video\"].permute(1, 0, 2, 3) for example in examples]\n",
+    "    )\n",
+    "    labels = torch.tensor([example[\"label\"] for example in examples])\n",
+    "    return {\"pixel_values\": pixel_values, \"labels\": labels}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02cbb857",
+   "metadata": {},
+   "source": [
+    "### Now we just pass all of this along with the datasets to `Trainer`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfed6f51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = Trainer(\n",
+    "    model,\n",
+    "    args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=val_dataset,\n",
+    "    processing_class=image_processor,\n",
+    "    compute_metrics=compute_metrics,\n",
+    "    data_collator=collate_fn,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77f76bd8",
+   "metadata": {},
+   "source": [
+    "### Now we finetune the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c860e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_results = trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14e99215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import time\n",
+    "from transformers import VideoMAEForVideoClassification, VideoMAEImageProcessor\n",
+    "from torchvision.transforms import Compose, Lambda, Resize, Normalize\n",
+    "from decord import VideoReader, cpu\n",
+    "from decord.bridge import set_bridge\n",
+    "import sounddevice as sd\n",
+    "import os\n",
+    "\n",
+    "# Set Decord to use PyTorch backend\n",
+    "set_bridge('torch')\n",
+    "\n",
+    "# Load finetuned model and processor\n",
+    "model_ckpt = '/path/to/your/model/directory'  # Update this path\n",
+    "image_processor = VideoMAEImageProcessor.from_pretrained(model_ckpt)\n",
+    "model = VideoMAEForVideoClassification.from_pretrained(model_ckpt, ignore_mismatched_sizes=True)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = model.to(device)\n",
+    "model.eval()\n",
+    "\n",
+    "# Preprocessing parameters\n",
+    "mean = image_processor.image_mean\n",
+    "std = image_processor.image_std\n",
+    "clip_duration = 1.71  # seconds\n",
+    "fps = 30  # assume 30 FPS\n",
+    "num_frames = model.config.num_frames\n",
+    "frame_window = int(num_frames)  # number of frames to collect per clip\n",
+    "\n",
+    "# Define video transformations\n",
+    "resize_to = (\n",
+    "    image_processor.size.get(\"height\", 224),\n",
+    "    image_processor.size.get(\"width\", 224),\n",
+    ")\n",
+    "\n",
+    "val_transform = Compose([\n",
+    "    Lambda(lambda x: x / 255.0),\n",
+    "    Resize(resize_to, antialias=True),\n",
+    "    Lambda(lambda x: x.permute(1, 0, 2, 3)),  # (C, T, H, W) -> (T, C, H, W)\n",
+    "    Normalize(mean=mean, std=std),\n",
+    "])\n",
+    "\n",
+    "# Predict gloss from a clip of frames\n",
+    "def predict_clip(frames: list):\n",
+    "    with torch.no_grad():\n",
+    "        # Convert to tensor: [T, H, W, C]\n",
+    "        video_tensor = torch.tensor(np.stack(frames))  # (T, H, W, C)\n",
+    "        video_tensor = video_tensor.permute(3, 0, 1, 2)  # (C, T, H, W)\n",
+    "        video_tensor = val_transform(video_tensor)  # (T, C, H, W)\n",
+    "        video_tensor = video_tensor.unsqueeze(0).to(device)  # (1, T, C, H, W)\n",
+    "        outputs = model(pixel_values=video_tensor)\n",
+    "        pred_id = outputs.logits.argmax(-1).item()\n",
+    "        return model.config.id2label[pred_id]\n",
+    "\n",
+    "\n",
+    "# Capture live video and predict\n",
+    "def live_classification():\n",
+    "    print(\"Starting live classification (press 'q' to quit)...\")\n",
+    "    cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "    frame_buffer = []\n",
+    "    last_prediction_time = time.time()\n",
+    "\n",
+    "    try:\n",
+    "        while cap.isOpened():\n",
+    "            ret, frame = cap.read()\n",
+    "            if not ret:\n",
+    "                break\n",
+    "\n",
+    "            # Resize and convert to RGB\n",
+    "            frame = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "            frame = cv2.resize(frame, (resize_to[1], resize_to[0]))\n",
+    "            frame_buffer.append(frame)\n",
+    "\n",
+    "            # Show live feed\n",
+    "            cv2.imshow('Live ASL Gloss Detection', cv2.cvtColor(frame, cv2.COLOR_RGB2BGR))\n",
+    "\n",
+    "            # If enough frames collected\n",
+    "            if len(frame_buffer) == frame_window:\n",
+    "                gloss = predict_clip(frame_buffer)\n",
+    "                print(f\"Predicted Gloss: {gloss}\")\n",
+    "                # Speak(gloss)  # Optional: say the word aloud\n",
+    "                frame_buffer = []  # Clear buffer\n",
+    "                time.sleep(0.3)  # Wait before next capture\n",
+    "\n",
+    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "                break\n",
+    "\n",
+    "    finally:\n",
+    "        cap.release()\n",
+    "        cv2.destroyAllWindows()\n",
+    "        print(\"Exited live classification.\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    live_classification()\n"
+   ]
   }
  ],
  "metadata": {
